    which represented potential security issues through spoofing. Headers
    must now be supplied via config - defaults to just REMOTE_ADDR
    (harry fuecks)
  - Added api_model_interceptor for overriding the behaviour of
    api_model_factory at runtime, by intercepting requests made to
    it and returning a different object from the factory instead.
    (harry fuecks)

2009-03-10 :: Version 1.1.7
  - api_testing_case_functional: Added openInBrowser method for debugging
    (alain)
  - api_init: Only define API_PROJECT_DIR if it's not defined, yet. 
    Needed to the inc/ folder can be a symlink to some central location.
    (pneff)
  - api_exceptionhandler_default: Check if 'line' is a valid index (marc /
    harry fuecks)

2009-01-15 :: Version 1.1.6
  - api_routing_regex: Fix E_NOTICE when mappings where not defined. (marc)
  - api_db: Use databases without DSN. (jordi.boggiano)
  - api_controller: processCommand is now public to bootstrap okapi in testing
    environments. (marc)
  - api_model_factory (testing/mocks/functional/): made $DEFAULTS publicly 
    accessible for testing purpose. (patrick.jezek)

2008-11-26 :: Version 1.1.5
  - api_config: Fix writing of cache files as they were written to incorrect
    paths. (pneff)
  - api_exceptionhandler: Remove type hinting which makes Okapi compatible
    with PHP 5.1 again. (chregu)
  - api_config: Improve replaceAllConsts() by not working on references but
    instead returning a modified array. This may break compatibility for
    projects that subclass api_config.
  - api_routing_route: New routing implementation supporting regular
    expressions for path matching. (marc)
  - api_config: Fix writing of cache files with environment keys.
    (lukas.smith)
  - api_testing_case_functional: Use PATH_SEPARATOR instead of hard-coded
    colon for include path. This fixes compatibility with MS Windows. (pneff)
  - api_config: Fixed bug in config cache dir generation that would lead to a